Shopping Cart Settings is now E Commerce Settings

--- a/erpnext_customization/erpnext_customization/custom/e_commerce_settings.json
+++ b/erpnext_customization/erpnext_customization/custom/e_commerce_settings.json
@@ -15,7 +15,7 @@
    "depends_on": null, 
    "description": null, 
    "docstatus": 0, 
-   "dt": "Shopping Cart Settings", 
+   "dt": "E Commerce Settings",
    "fieldname": "section_break_15", 
    "fieldtype": "Section Break", 
    "hidden": 0, 
@@ -30,7 +30,7 @@
    "label": null, 
    "modified": "2019-01-05 14:40:44.719654", 
    "modified_by": "Administrator", 
-   "name": "Shopping Cart Settings-section_break_15", 
+   "name": "E Commerce Settings-section_break_15",
    "no_copy": 0, 
    "options": null, 
    "owner": "Administrator", 
@@ -64,7 +64,7 @@
    "depends_on": null, 
    "description": null, 
    "docstatus": 0, 
-   "dt": "Shopping Cart Settings", 
+   "dt": "E Commerce Settings",
    "fieldname": "order_confirmation", 
    "fieldtype": "Text Editor", 
    "hidden": 0, 
@@ -79,7 +79,7 @@
    "label": "Order Confirmation", 
    "modified": "2019-01-05 12:41:52.589948", 
    "modified_by": "Administrator", 
-   "name": "Shopping Cart Settings-order_confirmation", 
+   "name": "E Commerce Settings-order_confirmation",
    "no_copy": 0, 
    "options": null, 
    "owner": "Administrator", 
@@ -100,31 +100,7 @@
   }
  ], 
  "custom_perms": [], 
- "doctype": "Shopping Cart Settings", 
- "property_setters": [
-  {
-   "_assign": null, 
-   "_comments": null, 
-   "_liked_by": null, 
-   "_user_tags": null, 
-   "creation": "2019-01-05 14:40:44.635888", 
-   "default_value": null, 
-   "doc_type": "Shopping Cart Settings", 
-   "docstatus": 0, 
-   "doctype_or_field": "DocType", 
-   "field_name": null, 
-   "idx": 0, 
-   "modified": "2019-01-05 14:40:44.635888", 
-   "modified_by": "Administrator", 
-   "name": "Shopping Cart Settings-read_only_onload", 
-   "owner": "Administrator", 
-   "parent": null, 
-   "parentfield": null, 
-   "parenttype": null, 
-   "property": "read_only_onload", 
-   "property_type": "Check", 
-   "value": null
-  }
- ], 
+ "doctype": "E Commerce Settings",
+ "property_setters": [],
  "sync_on_migrate": 1
 }
